# mcserver

./: README.md  start-canvas.sh
canvas-native/: Cargo.toml  build-targets.sh
canvas-native/src/: aabb.rs  lib.rs
canvas-server/: build.gradle.kts.patch
canvas-server/minecraft-patches/base/: 0004-Region-Threading.patch
canvas-server/minecraft-patches/features/: 0003-Canvas-FMA-hotpaths-and-BinaryHeap-cache-optimizatio.patch  0003-FMA-hotpaths-and-BinaryHeap-cache-optimization.patch  0004-Canvas-fix-multi-dragon-server-crash.patch  0004-fix-multi-dragon-server-crash.patch  0005-Canvas-fix-O-N-dragon-interactions-and-checkWalls-ov.patch  0005-fix-O-N-dragon-interactions-and-checkWalls-overhead.patch  0006-Canvas-aggressive-dragon-optimizations-no-op-applyEf.patch  0006-aggressive-dragon-optimizations-no-op-applyEffects.patch
canvas-server/minecraft-patches/sources/net/minecraft/network/: Connection.java.patch  PacketEncoder.java.patch
canvas-server/minecraft-patches/sources/net/minecraft/server/dedicated/: DedicatedServerProperties.java.patch
canvas-server/minecraft-patches/sources/net/minecraft/server/level/: ServerEntity.java.patch
canvas-server/minecraft-patches/sources/net/minecraft/util/: BitStorage.java.patch  CrudeIncrementalIntIdentityHashBiMap.java.patch  SimpleBitStorage.java.patch
canvas-server/paper-patches/base/: 0002-Update-logo.patch
canvas-server/src/main/resources/opencl/: mc_noise.cl
server-config/: bukkit.yml  canvas-server.yml  paper-global.yml  paper-world-defaults.yml  server.properties  spigot.yml  start.sh
(+39 files in other folders)
